--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,2 +1,11 @@
 spring.data.mongodb.uri=${MONGODB_URL_CON}
 spring.data.mongodb.database=youtube-clone
+
+### Amazon S3 ###
+aws.access_key_id=${AWS_S3_ACCESS_KEY}
+aws.secret_acess_key=${AWS_S3_SECRET_KEY}
+aws.s3.bucket=${AWS_S3_BUCKET_NAME}
+
+### Max size of videos
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
